# fuck_you_too

./: README.md  pyproject.toml
fuck_you_too/: __main__.py
